<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SplashActivity" >

    <ImageView
        android:id="@+id/splash_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textHome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splash_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/text_home1"
        android:textColor="#800000" />

    <TextView
        android:id="@+id/textHomeVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textAuthor"
        android:layout_below="@+id/textHome1"
        android:layout_marginTop="30dp"
        android:text="@string/text_home_version"
        android:textColor="#C0C0C0"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textHomeVersion"
        android:text="@string/text_auther"
        android:textColor="#C0C0C0"
        android:textSize="12sp" />

</RelativeLayout>